[feat] add main section [feat] add image carousel with splidejs

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <title>Kafil </title>
 </head>
 
-<body>
-  <header class="fixed bg-white drop-shadow-md w-full p-4">
+<body class="bg-gray-50 ">
+  <header class="sticky bg-white drop-shadow-md w-full p-4 z-50">
 
 
 
     <!-- wrapper -->
-    <div class="   flex mx-auto items-center justify-around gap-1 "> <!-- toggle menu button on > lg screen  -->
+    <div class=" max-w-[1250px]  flex mx-auto items-center justify-around gap-1  ">
+      <!-- toggle menu button on > lg screen  -->
       <button id="sidenav-menu_btn" type="button"
         class="  min-[850px]:hidden     items-center justify-center rounded-md p-2 text-gray-300 hover:bg-gray-300 hover:text-gray-700 focus:text-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-gray-500"
         aria-controls="side-nav" aria-expanded="false">
@@ -89,7 +90,7 @@
       </nav>
 
       <!-- profile wrapper -->
-      <div class="relative items-center flex gap-5">
+      <div class="relative items-center flex gap-3">
         <div class=" relative  cursor-pointer  ">
           <span
             class=" absolute bg-green-500  text-white   w-5 h-5 font-medium   text-[10px] flex items-center justify-center     rounded-full top-[-2%] right-[1%]  ">
@@ -111,7 +112,7 @@
           </svg>
         </div>
 
-        <div class="relative ml-3">
+        <div class="relative ">
           <div>
             <button type="button" class="relative flex hover:opacity-90   " id="profile-menu-button"
               aria-expanded="false" aria-haspopup="true">
@@ -295,7 +296,111 @@
       </div>
 
   </header>
-  <main></main>
+  <main>
+
+    <div class=" max-w-[1250px] mx-auto p-2 md:p-4 gap-5 flex flex-col md:flex-row items-center justify-center">
+
+      <!-- left side   -->
+      <!-- main service -->
+      <div class="flex  flex-col py-2 gap-2 flex-[3]">
+
+        <h5 class="text-gray-400 font-medium"> Design / Logo Design</h5>
+
+        <h3 class="font-semibold text-[24px]"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam nisi, cras
+          neque Lorem ipsum dolor sit amet,
+        </h3>
+
+        <div class="flex items-center">
+          <svg class="w-4 h-4 text-yellow-400 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor" viewBox="0 0 22 20">
+            <path
+              d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
+          </svg>
+          <svg class="w-4 h-4 text-yellow-400 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor" viewBox="0 0 22 20">
+            <path
+              d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
+          </svg>
+          <svg class="w-4 h-4 text-yellow-400 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor" viewBox="0 0 22 20">
+            <path
+              d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
+          </svg>
+          <svg class="w-4 h-4 text-yellow-400 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor" viewBox="0 0 22 20">
+            <path
+              d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
+          </svg>
+          <svg class="w-4 h-4 text-gray-300 me-1 dark:text-gray-500" aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
+            <path
+              d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
+          </svg>
+          <span class="ms-1 text-sm font-medium text-gray-500 dark:text-gray-400">4.1</span>
+          <span class="ms-1 text-sm font-medium text-gray-500 dark:text-gray-400">out of</span>
+          <span class="ms-1 text-sm font-medium text-gray-500 dark:text-gray-400">5</span>
+        </div>
+
+
+        <section id="image-carousel" class="splide " aria-label="Beautiful Images">
+          <div class="splide__arrows">
+            <button class="group  splide__arrow    shadow-md splide__arrow--prev  hover:bg-white  ">
+              <svg width="32" height="33" viewBox="0 0 32 33" class=" fill-white  group-hover:fill-green-500 "
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M21.0613 25.05C21.3431 25.3318 21.5014 25.7139 21.5014 26.1125C21.5014 26.511 21.3431 26.8932 21.0613 27.175C20.7795 27.4568 20.3973 27.6151 19.9988 27.6151C19.6003 27.6151 19.2181 27.4568 18.9363 27.175L8.9363 17.175C8.79646 17.0356 8.6855 16.87 8.6098 16.6877C8.53409 16.5054 8.49512 16.3099 8.49512 16.1125C8.49512 15.915 8.53409 15.7196 8.6098 15.5372C8.6855 15.3549 8.79646 15.1893 8.9363 15.05L18.9363 5.04996C19.2181 4.76817 19.6003 4.60986 19.9988 4.60986C20.3973 4.60986 20.7795 4.76817 21.0613 5.04997C21.3431 5.33176 21.5014 5.71395 21.5014 6.11246C21.5014 6.51098 21.3431 6.89317 21.0613 7.17496L12.125 16.1112L21.0613 25.05Z" />
+              </svg>
+
+            </button>
+            <button class="group hover:bg-white  splide__arrow  shadow-md splide__arrow--next">
+              <svg width="32" height="33" viewBox="0 0 32 33" class=" fill-white  group-hover:fill-green-500 "
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M23.0612 17.1725L13.0612 27.1725C12.7794 27.4543 12.3972 27.6126 11.9987 27.6126C11.6002 27.6126 11.218 27.4543 10.9362 27.1725C10.6544 26.8907 10.4961 26.5085 10.4961 26.11C10.4961 25.7115 10.6544 25.3293 10.9362 25.0475L19.8749 16.1113L10.9387 7.17252C10.7992 7.03299 10.6885 6.86735 10.613 6.68504C10.5375 6.50274 10.4986 6.30735 10.4986 6.11002C10.4986 5.9127 10.5375 5.71731 10.613 5.535C10.6885 5.3527 10.7992 5.18705 10.9387 5.04752C11.0782 4.90799 11.2439 4.79731 11.4262 4.7218C11.6085 4.64629 11.8039 4.60742 12.0012 4.60742C12.1985 4.60742 12.3939 4.64629 12.5762 4.7218C12.7585 4.79731 12.9242 4.90799 13.0637 5.04752L23.0637 15.0475C23.2034 15.187 23.3141 15.3528 23.3896 15.5352C23.4651 15.7176 23.5039 15.9131 23.5036 16.1105C23.5034 16.308 23.4642 16.5034 23.3883 16.6856C23.3123 16.8679 23.2012 17.0333 23.0612 17.1725Z" />
+              </svg>
+            </button>
+          </div>
+
+          <div class="splide__track ">
+            <ul class="splide__list  md:max-h-[464px]  ">
+              <li class="splide__slide">
+                <img class="carousel-img" src="images/main-service.png" alt="">
+              </li>
+              <li class="splide__slide ">
+                <img class="carousel-img" src="https://placehold.co/600x400" alt="" srcset="">
+              </li>
+              <li class="splide__slide ">
+                <img class="carousel-img" src="https://placehold.co/900x500" alt="" srcset="">
+              </li>
+
+              <li class="splide__slide">
+                <img class="carousel-img" src="images/1-service.png" alt="">
+              </li>
+            </ul>
+          </div>
+
+        </section>
+        <h5 class="font-semibold text-2xl text-black  "> Description</h5>
+
+        <p class="p-8 font-medium bg-white rounded-xl text-gray-800"> Lorem ipsum dolor sit amet, consectetur adipiscing
+          elit. Diam
+          nisi, cras neque
+          Lorem
+          ipsum dolor sit amet,
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam nisi, cras neque Lorem ipsum dolor sit amet,
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam nisi, cras neque Lorem ipsum dolor sit amet,
+          Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam nisi, cras neque
+          Lorem ipsum dolor sit amet.</p>
+      </div>
+
+
+      <!-- right side -->
+      <div class="flex-[1]">
+        <h2>haiss</h2>
+      </div>
+    </div>
+
+  </main>
 
   <script type="module" src="/src/main.ts"></script>
 </body>
